# MegaInt

./: .gitignore  CMakeLists.txt  Dockerfile.build  Dockerfile.test  README.md  TODO  build.sh  build_docker.sh  test_docker.sh
Driver/: CMakeLists.txt
Driver/src/: Driver.cpp
MegaCalc/: CMakeLists.txt
MegaCalc/include/: MegaCalc.h
MegaCalc/src/: MegaCalc.cpp
MegaInt/: CMakeLists.txt
MegaInt/include/: MegaInt.h
MegaInt/src/: DequeUtils.cpp  MegaInt.cpp
MegaInt/test/: TestMegaInt.cpp
Source/: Driver.cpp  MegaCalc.cpp  MegaCalc.h  MegaInt.h
